fix list.of usage